# Robotics_project

./: CMakeLists.txt  README.md
c/: aiAgent.cpp  aiAgent.h  deepRL.h  dqnAgent.cpp  dqnAgent.h  pyTensor.cpp  pyTensor.h  pyTorch.h  rlAgent.cpp  rlAgent.h
cuda/: cudaPlanar.cu  cudaPlanar.h
gazebo/: ArmPlugin.cpp  ArmPlugin.h  CMakeLists.txt  PropPlugin.cpp  PropPlugin.h  gazebo-arm.sh  gazebo-arm.world
gazebo/gazebo-pkgs/gazebo_grasp_plugin/: package.xml
gazebo/gazebo-pkgs/gazebo_state_plugins/: package.xml
gazebo/gazebo-pkgs/gazebo_test_tools/src/: SetGazeboPhysicsClient.cpp
lua/: DQN.lua  NEON.c  catchDQN.lua  catchENV.lua  hello.lua  test-cutorch.lua  test-lua.lua  test-packages.lua  test-torch.lua
python/: CRNN.py  DQN.py  RL.py  gym-DQN.py  gym-RL.py  gym-actorCritic.py  test-interop.py  test-torch.py
samples/: CMakeLists.txt
samples/catch/: CMakeLists.txt  catch.cpp
samples/fruit/: CMakeLists.txt  fruit.cpp  fruitEnv.cpp  fruitEnv.h
tools/: CMakeLists.txt
tools/input/: main.cpp
utils/: CMakeLists.txt  LICENSE.md  README.md  commandLine.cpp  commandLine.h  loadImage.cpp  loadImage.h  pi.h  rand.h
utils/camera/: gstCamera.cpp  gstCamera.h  gstUtility.cpp  gstUtility.h  v4l2Camera.cpp  v4l2Camera.h
utils/camera/gst-camera/: CMakeLists.txt  gst-camera.cpp
utils/camera/v4l2-console/: CMakeLists.txt  v4l2-console.cpp
utils/camera/v4l2-display/: CMakeLists.txt  v4l2-display.cpp
utils/cuda/: cudaFont.cu  cudaFont.h  cudaMappedMemory.h  cudaNormalize.cu  cudaNormalize.h  cudaOverlay.cu  cudaOverlay.h  cudaRGB.cu  cudaRGB.h  cudaResize.cu  cudaResize.h  cudaUtility.h  cudaYUV-NV12.cu  cudaYUV-YUYV.cu  cudaYUV-YV12.cu  cudaYUV.h
utils/display/: glDisplay.cpp  glDisplay.h  glTexture.cpp  glTexture.h  glUtility.h
utils/display/gl-display-test/: CMakeLists.txt  gl-display-test.cpp
utils/input/: devInput.cpp  devInput.h  devJoystick.cpp  devJoystick.h  devKeyboard.cpp  devKeyboard.h
